[gd_scene load_steps=10 format=3 uid="uid://cl2r4i00d811q"]

[ext_resource type="Script" path="res://Enemies/Non-bosses/AbandonedCity/OvergrownRat/Scripts/overgrown_rat.gd" id="1_rnvv3"]
[ext_resource type="PackedScene" uid="uid://bd10c1vc5irdq" path="res://Enemies/Non-bosses/AbandonedCity/OvergrownRat/Scenes/rat_projectile.tscn" id="2_iiv5k"]
[ext_resource type="Script" path="res://Enemies/HostileHitbox.gd" id="2_sgfoe"]
[ext_resource type="Script" path="res://Enemies/HostileHurtbox.gd" id="3_y08f1"]

[sub_resource type="Gradient" id="Gradient_xlncd"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0netl"]
gradient = SubResource("Gradient_xlncd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kscyg"]
size = Vector2(85, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cnyxn"]
radius = 401.0
height = 1966.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m32xq"]
size = Vector2(89, 37)

[node name="OvergrownRat" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 16
script = ExtResource("1_rnvv3")
projectile_scene = ExtResource("2_iiv5k")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(1.07288e-06, 0)
scale = Vector2(1.3125, 0.5)
texture = SubResource("GradientTexture2D_0netl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="WorldCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kscyg")

[node name="FirstDetectionRay" type="RayCast2D" parent="."]
target_position = Vector2(1e+07, 1e+07)

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Collision" type="CollisionShape2D" parent="DetectionArea"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cnyxn")
debug_color = Color(0.533333, 0.54902, 0.431373, 0.419608)

[node name="HostileHitbox" type="Area2D" parent="."]
script = ExtResource("2_sgfoe")

[node name="Collision" type="CollisionPolygon2D" parent="HostileHitbox"]
polygon = PackedVector2Array(42, -17, -43, -17, -43, 17, 42, 17)

[node name="HostileHurtbox" type="Area2D" parent="."]
script = ExtResource("3_y08f1")

[node name="Collision" type="CollisionShape2D" parent="HostileHurtbox"]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_m32xq")
debug_color = Color(0.342461, 0.61135, 0.318077, 0.42)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(0, 16)
amount = 50
lifetime = 0.5
speed_scale = 2.0
emission_shape = 3
emission_rect_extents = Vector2(40, 1)
gravity = Vector2(0, -10)
angular_velocity_min = -4.0
angular_velocity_max = 4.0
scale_amount_max = 4.0

[node name="RatProjectileSpawner" type="Marker2D" parent="."]
